
                CHANGES IN party VERSION 0.9-2 (2006-09-07)

    o    mob() can't currently handle missing values,
         they are removed and a warning is given.

    o    add `methods' and `vcd' to Depends:


                CHANGES IN party VERSION 0.9-0 (2006-08-31)

    o    node_barplot() can now also draw stacked barplots.

    o    simplify handling of ordinal variables. It is now possible
         to have multiple (ordinal) response variables.

    o    some documentation updates

    o    fix problems with NA handling for factors

    o    make sure minsplit criterion applies in the presence of missing
         values. Bug spotted by Han Lee <Han.Lee@geodecapital.com>.


                CHANGES IN party VERSION 0.8-8 (2006-08-23)

    o    export `varimp' (variable importance measures for cforest())

    o    documentation updates

    o    add codetools checks


                CHANGES IN party VERSION 0.8-7 (2006-07-17)

    o    REAL(NULL) now gives an error in C code and scores could be 
         potentially NULL: fixed for the time being.

    o    add `show' method for BinaryTree and RandomForest objects


                CHANGES IN party VERSION 0.8-6 (2006-05-22)

    o    add some validity checks for hyper parameters

    o    add function `varimp' for computing variable importance
         measures for some random forests (this is still experimental and
         thus not exported yet, so use `party:::varimp')


                CHANGES IN party VERSION 0.8-5 (2006-04-25)

    o    all hyper parameters to `cforest' are now controlled using
         objects of a new class `ForestControl' which can be created using
         `cforest_control()'. 

    o    sampling of a fraction of the observations without replacement
         is now available for the `cforest' implementation of random forest.


                CHANGES IN party VERSION 0.8-4 (2006-04-04)

    o    renamed argument `teststattype' to `teststat' with defaults